--- a/selenium-notebook.ipynb
+++ b/selenium-notebook.ipynb
@@ -266,16 +266,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3e651d8a-cbf7-4aa9-96a7-4fd47a2509af",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "result = \"there 2,5 item ff 5\"\n",
+    "number = re.search(r'\\d+', result).group()\n",
+    "\n",
+    "print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b1caf476-881a-4a4c-b9b1-db7f1bd38fe3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "124551120\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "result = \"there 1,24,5511 and 20\"\n",
+    "numbers = re.findall(r'\\d+', result)\n",
+    "concatenated_number = ''.join(numbers)\n",
+    "\n",
+    "final_number = int(concatenated_number)\n",
+    "\n",
+    "print(final_number)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1caf476-881a-4a4c-b9b1-db7f1bd38fe3",
+   "id": "28676145-ef18-417d-936f-3c19986534fd",
    "metadata": {},
    "outputs": [],
    "source": []
