--- a/discord code/source code/selenium-notebook.ipynb
+++ b/discord code/source code/selenium-notebook.ipynb
@@ -319,8 +319,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "28676145-ef18-417d-936f-3c19986534fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "# Data cleaning code\n",
+    "_25_git_card_quantity = \"\"\n",
+    "_25_git_card_quantity = re.findall(r'\\d+', _25_git_card_quantity)\n",
+    "_25_git_card_quantity = ''.join(_25_git_card_quantity)\n",
+    "_25_git_card_quantity = int(_25_git_card_quantity) if _25_git_card_quantity else 0\n",
+    "_25_git_card_quantity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3e50060d-59b0-4d1c-b8f4-2b59e2bad3df",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4040"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "# Data cleaning code\n",
+    "_25_git_card_quantity = \"cccc40fff40\"\n",
+    "# Data cleaning code\n",
+    "_25_git_card_quantity = int(''.join(re.findall(r'\\d+', _25_git_card_quantity) or '0'))\n",
+    "_25_git_card_quantity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0153cb72-74b5-4fb4-a833-85f65c2f2d45",
    "metadata": {},
    "outputs": [],
    "source": []
